# wheel_odometry

./: CMakeLists.txt  package.xml
codefiles/: USART.py  control_script.py  lidar_monitor.py  send_arduino
config/: odom_params.yaml
launch/: odometry.launch.py
scripts/: encoder_node  install.sh  pose_printer.py  wheel_odometry_node  wheel_ticks_publisher
src/: control_script.py  wheel_odometry_node.cpp
